--- a/cmos-vlsi/references.bib
+++ b/cmos-vlsi/references.bib
@@ -1,6 +1,10 @@
-@book{cmosvlsi-4th,
-  title={CMOS VLSI design: a circuits and systems perspective},
-  author={Weste, Neil HE and Harris, David},
-  year={2015},
-  publisher={Pearson Education India}
+@book{cmosvlsi,
+author = {Weste, Neil and Harris, David},
+title = {CMOS VLSI Design: A Circuits and Systems Perspective},
+year = {2010},
+isbn = {0321547748},
+publisher = {Addison-Wesley Publishing Company},
+address = {USA},
+edition = {4th},
+abstract = {For both introductory and advanced courses in VLSI design, this authoritative, comprehensive textbook is highly accessible to beginners, yet offers unparalleled breadth and depth for more experienced readers. The Fourth Edition of CMOS VLSI Design: A Circuits and Systems perspective presents broad and in-depth coverage of the entire field of modern CMOS VLSI Design. The authors draw upon extensive industry and classroom experience to introduce todays most advanced and effective chip design practices. They present extensively updated coverage of every key element of VLSI design, and illuminate the latest design challenges with 65 nm process examples. This book contains unsurpassed circuit-level coverage, as well as a rich set of problems and worked examples that provide deep practical insight to readers at all levels.}
 }
