--- a/design-verification/questions-logic.qmd
+++ b/design-verification/questions-logic.qmd
@@ -18,6 +18,58 @@ Key concepts:
 
 **Q: Constraint question: You have a total memory size of 4096 bytes. Each page can be 32, 64, 128 bytes. Each page must be aligned. Write a constraint / function that generates a random range that satisfy this constraint**
 
+**Q: Gray codes, why? How to convert from binary?**
+
+1 bit flip between consecutive numbers. To convert from binary, keep the MSB, for subsequent bits, take the XOR of corresponding binary bit and the previous (more significant) binary bit. A Verilog conversion looks something like this:
+
+```verilog
+module binary_to_gray #(parameter WIDTH = 4) (
+    input  [WIDTH-1:0] binary,
+    output [WIDTH-1:0] gray
+);
+    assign gray = binary ^ (binary >> 1);
+endmodule
+```
+
+A gray code counter can be implemented as follows ([Source: ChipVerify](https://www.chipverify.com/verilog/verilog-gray-counter)):
+
+```verilog
+module gray_ctr
+  # (parameter N = 4)
+
+  (	input 	clk,
+	input 	rstn,
+	output reg [N-1:0] out);
+
+	reg [N-1:0] q;
+
+	always @ (posedge clk) begin
+		if (!rstn) begin
+    	q <= 0;
+    		out <= 0;
+      end else begin
+  		q <= q + 1;
+
+`ifdef FOR_LOOP
+        // For loop implementation
+    	for (int i = 0; i < N-1; i= i+1) begin
+      	out[i] <= q[i+1] ^ q[i];
+    	end
+    	out[N-1] <= q[N-1];
+`else
+			out <= {q[N-1], q[N-1:1] ^ q[N-2:0]};
+`endif
+    end
+	end
+endmodule
+```
+
+Key ideais to 
+
+**Q: What is parity bit?**
+
+Even parity and odd parity, indicates whether the number of 1s in a binary string is even or odd. To compute the parity bit, take the XOR of all the bits, which gives us the even parity (0 = Even, 1 = Odd). To get odd parity, flip the even parity bit (e.g. by XORing it with 1).
+
 ## FIFOs
 
 **Q: Asynchronous FIFO qustion (with dual port RAM): gray code? FIFO depth is 10, read/write pointers is 4 bits wide. What should the initial value of the read/write pointers be?**
